--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@ document.domain = 'mp.9g.com';
         </figcaption>
     <span class="btn btn-g" data-url="http://game2.id87.com/qingwa/wx.html?f=9g"><a href="games/Shot_Trigger/index.html">开始玩</a></span></figure>
   </li>
+  <li data-url="http://game2.id87.com/qingwa/wx.html?f=9g">
+    <figure><img src="icon/pigu.png" width="497" height="589">
+        <figcaption>
+          <h3 class="tit">走路</h3>
+          <p>一起走路</p>
+          <p>热度：<span id="37" style="color:#FFCC00"></span>人在玩过。</p>
+        </figcaption>
+    <span class="btn btn-g" data-url="http://game2.id87.com/qingwa/wx.html?f=9g"><a href="games/Walk_Master/index.html">开始玩</a></span></figure>
+  </li>
+  <li data-url="http://game2.id87.com/qingwa/wx.html?f=9g">
+    <figure><img src="icon/pigu.png" width="497" height="589">
+        <figcaption>
+          <h3 class="tit">钞票</h3>
+          <p>一起数钞票</p>
+          <p>热度：<span id="37" style="color:#FFCC00"></span>人在玩过。</p>
+        </figcaption>
+    <span class="btn btn-g" data-url="http://game2.id87.com/qingwa/wx.html?f=9g"><a href="games/Money_Master/index.html">开始玩</a></span></figure>
+  </li>
   </ul>
 	<p>&nbsp;</p>
 	<p><a href="http://wx.wsq.qq.com/261361729"><img src="./img/index1/ad.png" width="100%" border="0"></a>    </p>
@@ -142,6 +160,15 @@ document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3
 <script>
     var timestamp = (Date.parse(new Date())/1000) + (3602*8);
     document.getElementById("2").innerHTML = timestamp%864000;
+</script>
+<script>
+  var timestamp = (Date.parse(new Date())/1000) + (3501*7);
+  document.getElementById("3").innerHTML = timestamp%864000;
+</script>
+
+<script>
+  var timestamp = (Date.parse(new Date())/1000) + (3202*8);
+  document.getElementById("4").innerHTML = timestamp%864000;
 </script>
 
 </body></html>
